# fast_udemy

introducao/: pyproject.toml
project1/: alphavantage_api_key  converter.py  main.py  pyproject.toml  routers.py  schemas.py
project2/: Dockerfile  docker-compose.yml  pyproject.toml
project2/app/: main.py
project2/app/db/: connection.py  models.py
project2/app/migrations/: env.py
project2/app/migrations/versions/: 7d1eafe0962a_add_categories_table.py
project2/app/routes/: category_routes.py  deps.py
project2/app/schemas/: category.py
project2/app/test/: conftest.py
project2/app/test/routes/: test_category_routes.py
project2/app/test/schemas/: test_category_schema.py  test_category_use_cases.py
project2/app/use_cases/: category.py
