[tool.poetry]
name = "project1"
version = "0.1.0"
description = ""
authors = ["Rodrigo55pereira <rodrigo55pereira@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11.8"
fastapi = "^0.110.0"
uvicorn = "^0.27.1"
requests = "^2.31.0"
aiohttp = "^3.9.3"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
